// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldUtils <FieldIcon /> accepts additional props 1`] = `
<FieldIcon
  fill="none"
  label="Date"
  scripted={false}
  type="date"
/>
`;

exports[`FieldUtils <FieldIcon /> renders Document type properly 1`] = `
<FieldIcon
  label="Records"
  type="number"
/>
`;

exports[`FieldUtils <FieldIcon /> renders properly 1`] = `
<FieldIcon
  label="Date"
  scripted={false}
  type="date"
/>
`;

exports[`FieldUtils <FieldIcon /> renders properly scripted fields 1`] = `
<FieldIcon
  label="Date"
  scripted={true}
  type="date"
/>
`;
